Trying to fix my newest container box
Trying to fix my newest container box with proper CSS. It wasn't very good for mobile pages, as the posts went out of the box.

Fixing with an overflow property.

Also limiting the number of hits in the array to 4, but it's hardcoded atm. Will fix this later on, it's just for the CSS atm

--- a/css/index-spesific.css
+++ b/css/index-spesific.css
@@ -25,7 +25,17 @@
     border: 2px solid;
     margin: 20px auto;
     max-width: 850px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: flex;
+    overflow-y: scroll;
+}
+
+
+
+
+@media (min-width: 600px) {
+    .newest-posts{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
 
