--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -58,7 +58,7 @@ header > a{
     justify-content: space-evenly;
     margin: 0px;
     background-color: var(--primary-color);
-    width: 50%;
+    width: 70%;
     border-radius: 0px 0px 0px 15px;
     padding: 50px 0px 0px 0px;
     align-items: flex-end;
@@ -148,7 +148,17 @@ main{
     
 }
 
+.single-post-in-list{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    margin: 20px;
+    justify-content: space-between;
+}
 
+.single-post-in-list > h3{
+    width: 250px;
+}
 
 /* THIS IS FOR THE FOOTER */
 footer{
@@ -215,5 +225,13 @@ a > i{
     }
     #menu_icon{
         display: none;
+    }
+
+    .single-post-in-list{
+        width: auto;
+    }
+    
+    .single-post-in-list > h3{
+        width: auto;
     }
 }
